--- a/technoTest/TechnoTest.API/appsettings.json
+++ b/technoTest/TechnoTest.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JWTSettings": {
+    "SecretKey": "SecretKey10125779374235322",
+    "Issuer": "MyApiToken",
+    "Audience": "MyClient"
+  }
 }
